--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
     "geoip-lite": "^1.4.3",
-    "http": "^0.0.1-security"
+    "http": "^0.0.1-security",
+    "mysql": "^2.18.1"
   }
 }
