mysql switched to mysql2 due to bug on vps, port switched to 3001
Signed-off-by: Pierre-Louis Delcroix <pierrelouisdelcroix2001@gmail.com>

--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "express": "^4.17.2",
     "geoip-lite": "^1.4.3",
     "http": "^0.0.1-security",
-    "mysql": "^2.18.1"
+    "mysql2": "^2.3.3"
   }
 }
