marker added to map
Signed-off-by: Pierre-Louis Delcroix <pierrelouisdelcroix2001@gmail.com>

--- a/sshreact/package.json
+++ b/sshreact/package.json
@@ -16,7 +16,7 @@
     "mysql2": "^2.3.3"
   },
   "scripts": {
-    "start": "Browser=NONE react-scripts start",
+    "start": "BROWSER=NONE react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
