--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
+    "fs": "^0.0.1-security",
     "geoip-lite": "^1.4.2",
     "leaflet": "^1.8.0",
     "react": "^18.2.0",
