--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,4 +4,6 @@ services:
     build: .
     ports:
       - "3000:3000"
+    volumes:
+      - /var/log/auth.log:/var/log/auth.log
     restart: always
