--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "fs": "^0.0.1-security",
     "geoip-lite": "^1.4.2",
     "leaflet": "^1.8.0",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.0.1",
